# nag-difference-hopfion

./: AGENTS.md  CHECKPOINTS.md  CITATION.cff  CODEX_TASKS.md  README.md  nag-difference-hopfion-initial-main.bundle  pr5-extraction-validation-clean.patch  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
blender/: README.md
data/processed/: EXTRACTION_STATUS.md  extracted_barriers.json  extraction_comparison.csv  nag_hopfion_master_matrix.csv  nag_hopfion_pairwise_barriers.csv  nag_hopfion_scoring_template.csv
data/raw/: README.md  moesm_strict_mapping.json
docs/: NAG_Difference_Core_Theory.md  NAG_Difference_Hopfion_Theory_Memo.md  case_study_erdos_1196.md  formalization_roadmap.md  github_repository_plan.md  progress_visuals.md  raw_extraction_protocol.md
formal/: README.md
formal/NAGDifference/: CancellationLemma.lean  FiniteAntichain.lean  PairwiseWinner.lean
nagdiff/: __init__.py  cancellation.py  chain_certificate.py  extraction.py  hopfion_terms.py  pairwise.py  pipeline.py  reporting.py  scoring.py  verification.py
notebooks/: 01_build_master_matrix.ipynb
tests/: test_cancellation.py  test_chain_certificate.py  test_extraction.py  test_pairwise.py  test_pipeline.py  test_provisional_labeling.py  test_reporting.py  test_scoring.py  test_verification.py
