[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nag-difference-hopfion"
version = "0.1.0"
description = "Research scaffold for NAG-Difference endpoint comparison in FeGe hopfion state selection"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
